k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
  namespace: amazon
  labels:
    app: amazon-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  type: ClusterIP
  selector:
    app: amazon-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-service-lb
  namespace: amazon
  labels:
    app: amazon-app
    type: loadbalancer
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "Shrinivas-RG"
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/"
    service.beta.kubernetes.io/azure-load-balancer-health-probe-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: amazon-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
